# curious

./: .envrc  .gitignore  Makefile  README.md  completions_0.txt  completions_1.txt  completions_2.txt  completions_3.txt  config.py  deepspeed_config.json  depend.py  evaluate.py  main.ipynb  main.py  modal_setup.py  pyproject.toml  sampling.ipynb  test.ipynb  train.sh  training.py
curious/: buffer.py  config.py  data.py  evaluate.py  grpo.py  loss.py  modal_saliency_compare.py  modal_train.py  prompt.py  reward.py  sampling.py  training.py  utils.py
curious/data/: __init__.py  gsm8k.py  math.py
curious/policy_gradient/: ad_cispo.py  loss.py
curious/replay/: curriculum.py  experience.py
curious/reward/: __init__.py  rule_rm.py
curious/reward/rule/: gsm8k.py  reward.py
curious/sampling/: __init__.py  sampling.py  sfl.py  sglang_backend.py
curious/train/: train_rl.py  train_sfl.py  trainer.py  training_setup.py
curious/training/: normal.py  sfl.py  train_rl.py  train_sfl.py  trainer.py  training_setup.py
curious/utils/: utils.py
curious/utils/llm/: model_tokenizer.py
curious/utils/rl/: buffer.py  intervention.py  sampling.py
evals/Qwen2_0.5B_Instruct/gsm8k/curious_96704751_fd7e_4b4f_b292_e26ef1b32e1a/: log.txt
evals/Qwen2_0.5B_Instruct/gsm8k/qwen_05b_ins_gsm8k/: log.txt
experiments/baseline_gsm8k_grpo/: README.md  baseline_research_report.html  staging_report.md  wandb_metrics_npw100co.json
experiments/saliency_reasoning_traces/: README.md  attention_heatmap.html  causal_tangent_heatmap.html  causal_tangent_smoothed_heatmap.html  head_to_head_heatmap.html  saliency_data.json  summary.json
experiments/saliency_reasoning_traces_top8/: attention_heatmap.html  causal_tangent_heatmap.html  causal_tangent_smoothed_heatmap.html  head_to_head_heatmap.html  saliency_data.json  summary.json
experiments/saliency_smoothed_top4_vs_top8/: smoothed_top4_vs_top8_head_to_head.html  summary.json
resesarch_proposal/: AD_CISPO_Research_Proposal.aux  AD_CISPO_Research_Proposal.md  AD_CISPO_Research_Proposal.out  AD_CISPO_Research_Proposal.tex
scripts/: dr_grpo.sh  dr_grpo_dapo.sh  gpg.sh  grpo.sh  launch_ad_cispo_gsm8k_local.sh  launch_ad_cispo_gsm8k_modal.sh  launch_baseline_gsm8k_grpo_local.sh  launch_baseline_gsm8k_grpo_modal.sh  launch_baseline_gsm8k_training_local.sh  launch_baseline_gsm8k_training_modal.sh  launch_cispo_baseline_gsm8k_grpo_modal.sh  launch_cispo_baseline_gsm8k_local.sh  launch_cispo_baseline_gsm8k_modal.sh  modal_train.sh  monitor_baseline_gsm8k_grpo.sh  monitor_modal_wandb.py  rloo.sh  run_baseline_gsm8k_training.sh  run_saliency_comparison_modal.sh  sfl_dr_grpo.sh  sfl_grpo.sh  smoke_liger_fa3_h100.py
tests/: test_ad_cispo.py  test_completion_logging.py  test_gsm8k_dataset.py  test_model_loading.py  test_reward.py  test_sglang_backend.py  test_training_setup.py
train_logs/grpo-reproduction/: log_0.txt
