[project]
name = "curious"
version = "0.1.0"
description = "A curious llm"
authors = [
    { name = "RobbenRibery", email = "runodng.liu@outlook.com" },
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "accelerate==1.6.0",
    "datasets==3.5.0",
    "diff-parser==1.1",
    "flash-attn-3==3.0.0; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "flash-attn-4>=4.0.0b9; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "liger-kernel==0.8.0; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "math-verify==0.7.0",
    "memory-profiler==0.61.0",
    "modal==1.4.3",
    "python-dotenv==1.1.0",
    "setuptools==76.1.0",
    "sglang==0.5.13; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "toml==0.10.2",
    "torch==2.11.0",
    "transformers==5.8.1",
    "tree-sitter==0.24.0",
    "trl==0.16.1",
    "tyro==0.9.18",
    "unidiff==0.7.5",
    "wandb==0.27.0",
]

[dependency-groups]
dev = [
    "ipykernel==6.29.5",
]
h100-vm = [
]

[tool.uv]
required-version = ">=0.9.0"
prerelease = "allow"
package = false

[tool.uv.sources]
flash-attn-3 = { index = "pytorch-cu130" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
